# kusozako_game

./: CMakeLists.txt  a.out  mvp_spec_v_2.md  mvp_spec_v_3.md
assets/: ai_temperaments.json  atlas.json  entities.json  formations.json  game.json  jobs.json  map_defs.json  mission_level1.json  morale.json  skills.json  spawn_level1.json  spawn_weights.json
assets/maps/: level1.tmx
assets/ui/: hud_font.fnt
config/: app.json  input.json  renderer.json
docs/: debug_mode_design.md  mvp_design.md  testing.md
old/: mvp_spec_v_1.md
src/: main.cpp
src/app/: FramePerf.h  GameApplication.cpp  GameApplication.h  RenderUtils.h  TextRenderer.cpp  TextRenderer.h  UiPresenter.cpp  UiPresenter.h  UiView.cpp  UiView.h
src/assets/: AssetManager.cpp  AssetManager.h
src/config/: AppConfig.cpp  AppConfig.h  AppConfigLoader.cpp  AppConfigLoader.h
src/debug/: DebugController.cpp  DebugController.h  DebugOverlayView.cpp  DebugOverlayView.h
src/events/: EventBus.cpp  EventBus.h  FormationEvents.h  JobEvents.h  MoraleEvents.h
src/input/: ActionBuffer.cpp  ActionBuffer.h  InputMapper.cpp  InputMapper.h
src/json/: JsonUtils.h
src/scenes/: Scene.h  SceneStack.cpp  SceneStack.h
src/services/: ActionBuffer.cpp  ActionBuffer.h  InputMapper.cpp  InputMapper.h  ServiceLocator.cpp  ServiceLocator.h
src/telemetry/: ConsoleTelemetrySink.cpp  ConsoleTelemetrySink.h  FileTelemetrySink.cpp  FileTelemetrySink.h  PerformanceBudgetMonitor.cpp  PerformanceBudgetMonitor.h  TelemetrySink.cpp  TelemetrySink.h
src/world/: ComponentPool.h  Entity.h  FormationUtils.h  FrameAllocator.h  LegacySimulation.cpp  LegacySimulation.h  LegacyTypes.h  MoraleTypes.h  SkillRuntime.h  SpatialGrid.h  WorldState.h
src/world/spawn/: Spawner.cpp  Spawner.h  WaveController.cpp  WaveController.h
src/world/systems/: BehaviorSystem.cpp  BehaviorSystem.h  CombatSystem.cpp  CombatSystem.h  CommanderInputSystem.cpp  CommanderInputSystem.h  FormationSystem.cpp  FormationSystem.h  JobAbilitySystem.cpp  JobAbilitySystem.h  MoraleSystem.cpp  MoraleSystem.h  MovementSystem.cpp  MovementSystem.h  RenderingPrepSystem.cpp  RenderingPrepSystem.h  SystemContext.h
tests/: AssetManagerMemoryWarningTest.cpp  ConfigSchemaTest.cpp  EventBusTest.cpp  JobAbilitySystemTest.cpp  PerformanceBudgetMonitorTest.cpp  SpawnerTest.cpp  StubUiPresenter.cpp  SystemsBehaviorTest.cpp  TestSystem.h  UiPresenterTest.cpp  UiViewTest.cpp  WorldStateStepOrderTest.cpp
tests/stubs/: SDL.h
tests/stubs/app/: UiPresenter.h
tests/stubs/core/: Vec2.h
tests/stubs/world/: FormationUtils.h  LegacySimulation.h  LegacyTypes.h  MoraleTypes.h  SkillRuntime.h
tests/ui_presenter/world/: LegacySimulation.h
